# algorithmic_thinking

./: CMakeLists.txt  LICENSE  test.sh
chapter_1/: CMakeLists.txt  login.c  login_input.txt  spellcheck.c  spellcheck_input.txt
chapter_2/: CMakeLists.txt  halloween.c  halloween_input.txt  halloween_output.txt
chapter_3/: CMakeLists.txt  homer.c  homer_dp.c  homer_input.txt  homer_output.txt  moneygrubbers.c  moneygrubbers_memo.c  moneygrubbers_output.txt
